<resources>
    <string name="app_name">AndroidQuiz</string>
    <string name="TVversiune">Versiune: 1.0</string>
    <string name="id_titlu">Bine ai venit!</string>
    <string name="id_conectare">Conectare</string>
    <string name="id_inregistrare">Inregistrare</string>
    <string name="id_numeProfI">Nume</string>
    <string name="id_prenumeProfI">Prenume</string>
    <string name="id_numeStudI">Nume</string>
    <string name="id_prenumeStudI">Prenume</string>
    <string name="id_mailStudI">E-mail</string>
    <string name="id_parolaStudI">Parola</string>
    <string name="id_confirmParolaStudI">Confirma parola</string>
    <string name="id_mailProfI">E-mail</string>
    <string name="id_parolaProfI">Parola</string>
    <string name="id_confirmParolaProfI">Confirma parola</string>
    <string name="id_profilProf">Profil profesor</string>
    <string name="id_profilStud">Profil student</string>
    <string name="id_radioGrup"></string>
    <string name="id_butonInregistreaza">Creeaza cont</string>
    <string name="id_butonInregistreazaStud">Creeaza cont</string>
    <string name="id_titluConectareStud">Conecteaza-te!</string>
    <string name="id_emailProfConectare">E-mail</string>
    <string name="id_parolaProfConectare">Parola</string>
    <string name="id_butonConectare">Conectare</string>
    <string name="id_codProfConectare">Cod</string>
    <string name="profilMain">Selecteaza profilul!</string>
    <string name="inregistrareProfilProf">Inregistrare profil profesor</string>
    <string name="inregistrarePrStud">Inregistrare profil student</string>
    <string name="conectareProf">Conectare profil profesor</string>
    <string name="conectareStud">Conectare profil student</string>
    <string name="id_mailConectareStud">E-mail</string>
    <string name="id_parolaConectareStud">Parola</string>
    <string name="id_codConectareStud">Cod</string>
    <string name="id_butonConectareStud">Conectare</string>
    <string name="contPersonal">Cont personal</string>
    <string name="quizuriParcurse">Teste parcurse:</string>
    <string name="alegeMaterieQuizNou">Alege o materie pentru a parcurge un test nou:</string>
    <string name="id_numeUtilizatorContS">Buna, ....</string>
    <string name="id_spinnerMaterieS"></string>
    <string name="id_boutonQuizNouS">Incepe testul!</string>
    <string name="contPersonalProf">Cont personal</string>
    <string name="bunaProf">Buna, ...</string>
    <string name="adQuiz">Adaugare test</string>
    <string name="veziProgres">Vezi progres student</string>
    <string name="feedback">Ofera feedback</string>
    <string name="titluListaQuizProf">Lista teste existente:</string>
    <string name="listaQuizProf"></string>
    <string name="titluIntroducereCod">Pentru a vizualiza progresul studentului, introduceti codul!</string>
    <string name="hintIntroducereCod">Cod student</string>
    <string name="progresTitlu">Progres student</string>
    <string name="gridViewProgresStudent"></string>
    <string name="inapoiContProf"></string>
    <string name="backContProfFdb"></string>
    <string name="listaStudentiFdb"></string>
    <string name="searchViewStudentFdb"></string>
    <string name="adTestButton">Adaugă test!</string>
    <string name="spinnerTipIntrebare">Alege tipul de intrebare</string>
    <string name="TValegeTipIntrebare">Alege tipul de intrebare</string>
    <string name="intrebare1">Intrebare 1</string>
    <string name="intrebare2">Intrebare 2</string>
    <string name="intrebare3">Intrebare 3</string>
    <string name="intrebare4">Intrebare 4</string>
    <string name="intrebare5">Intrebare 5</string>
    <string name="raspunsDeschis">Adauga raspuns</string>
    <string name="butonSubmit">Mergi inapoi la cont</string>
    <string name="terminareTest">Ați finalizat testul!</string>
    <string name="punctajFinalTest">Punctajul acumulat:</string>
    <string name="nrRaspCorecteTest">Numar de raspunsuri corecte: n/M</string>
    <string name="dificultateTest">Dificultatea testului:</string>
    <string name="ratingBarDificultate"></string>
    <string name="butonSubmitFinalizareTest"></string>
    <string name="TVfeedbackAplicatie">Ofera o nota aplicatiei,</string>
    <string name="TVcomentariu">si, daca vrei sa ne transmiti ceva:</string>
    <string name="TVms">Multumim! :)</string>
    <string name="comentariuFeedbackAplicatie"></string>
    <string name="TVinfo"></string>
    <string name="denumireAplicatie">Android Quiz</string>
    <string name="TVDescriere">Aplicatie interactiva destinata crearii si sustinerii de teste in mediul universitar. Aplicatia se adreseaza atat profesorilor, permitand crearea si partajarea de teste, cat si studentilor, acestia fiind
        evaluati intr-o maniera inedita.
    </string>
    <string name="TVtitluContact">Contacteaza-ne!</string>
    <string name="TVmailContact">Mail: androidquiz@gmail.com</string>
    <string name="TVtelefonContact">Telefon: 0349 145 147</string>
    <string name="TVadresaContact">Adresa: Calea Dorobanti nr. 15-17, Sector 1, Bucuresti.</string>
    <string name="TVsite">Proiect in cadrul Facultatii de Cibernetica, Statistica si Informatica Economica</string>
    <string name="buttonOferaFeedback">Ofera nota</string>
    <string name="TVpartajareCatre">Partajati testul catre:</string>
    <string name="parasesteContStudent">Paraseste contul</string>
    <string name="parasesteContProfesor">Paraseste contul</string>
    <string name="schimbaParola">Schimba parola</string>
    <string name="intrebare1P">Cum putem initializa pointerii in JAVA?</string>
    <string name="radioBtn11">folosind mai multi operatori</string>
    <string name="radioBtn12">folosind operatorul de diferentiere *</string>
    <string name="radioBtn13">nu exista pointeri in java</string>
    <string name="intrebare2P">Ce tipuri de aplicatii JAVA exista?</string>
    <string name="radioBtn21">baze de date</string>
    <string name="radioBtn22">aplicatii care se executa pe server sau client</string>
    <string name="radioBtn23">clienturi</string>
    <string name="intrebare3P">Cu ce comanda putem dezasambla un cod binary JAVA?</string>
    <string name="checkBox31">java –p</string>
    <string name="checkBox32">javac</string>
    <string name="checkBox33">javap</string>
    <string name="intrebare4P">Ce inseamna jdk?</string>
    <string name="checkBox41">Java Development Kit</string>
    <string name="checkBox42">Java Developping Key</string>
    <string name="checkBox43">Java Virtual Machine</string>
    <string name="intrebare5P">Ce este polimorfismul?</string>
    <string name="raspunsI5">Raspuns</string>
    <string name="schimbareParola">Schimbare parola</string>
    <string name="parolaVeche">Parola actuala</string>
    <string name="parolaNoua">Parola noua</string>
    <string name="deconectare">Deconectare</string>
    <string name="title_activity_maps">Map</string>
    <string name="buttonSH">Salveaza datele</string>
    <string name="buttonSD">Salveaza datele</string>
    <string name="date"></string>
    <string name="datee"></string>

    <string name="setari">Setari cont</string>
    <string name="editTextRaspunsDeschis">Raspuns</string>
    <string name="usersInfo">Aplicatia este folosita de %d utilizatori.</string>
    <string name="detaliiContStudent">Detalii cont</string>
    <string name="textViewDetaliiContStudent">Detalii cont</string>
    <string name="textViewNumeStud">Nume: </string>
    <string name="textViewPrenumeStudent">Prenume: </string>
    <string name="textViewEmailStudent">Email: </string>
    <string name="buttonStergeCont">Sterge cont</string>
    <string name="detaliiContProfesor">Detalii cont</string>
    <string name="detaliiContProf">Detalii cont</string>
    <string name="textViewNumeProf">Nume: </string>
    <string name="textViewPrenumeProf">Prenume: </string>
    <string name="textViewEmailProf">Email: </string>
    <string name="buttonStergeContProf">Sterge cont</string>
    <string name="txtSalvare">Salveaza in fisier text</string>
    <string name="maiIncearca">Mai incearca</string>
    <string name="iesire">Iesire</string>
    <string name="reIncearca">Reincerca</string>
</resources>
