<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4FDFF"
    android:fillViewport="true">
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minHeight="164dp"
    tools:context=".InregistrareProfilStudent">

    <TextView
        android:id="@+id/inregistrarePrStud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="casual"
        android:text="@string/inregistrarePrStud"
        android:textColor="#111E6C"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.100000024" />

    <EditText
        android:id="@+id/id_numeStudI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/id_numeStudI"
        android:textColorHint="#111E6C"
        android:backgroundTint="#0F194C"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/id_prenumeStudI"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inregistrarePrStud" />

    <EditText
        android:id="@+id/id_prenumeStudI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/id_prenumeStudI"
        android:textColorHint="#111E6C"
        android:backgroundTint="#0F194C"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/id_mailStudI"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_numeStudI" />

    <EditText
        android:id="@+id/id_mailStudI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/id_mailStudI"
        android:textColorHint="#111E6C"
        android:backgroundTint="#0F194C"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/id_parolaStudI"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_prenumeStudI" />

    <EditText
        android:id="@+id/id_parolaStudI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/id_parolaStudI"
        android:textColorHint="#111E6C"
        android:backgroundTint="#0F194C"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/id_confirmParolaStudI"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_mailStudI" />

    <EditText
        android:id="@+id/id_confirmParolaStudI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/id_confirmParolaStudI"
        android:textColorHint="#111E6C"
        android:backgroundTint="#0F194C"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/id_butonInregistreazaStud"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_parolaStudI" />

    <Button
        android:id="@+id/id_butonInregistreazaStud"
        android:layout_width="142dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        android:background="#0F194C"
        android:fontFamily="casual"
        android:onClick="creeazaContStudent"
        android:text="@string/id_butonInregistreazaStud"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_confirmParolaStudI" />
</android.support.constraint.ConstraintLayout>
</ScrollView>