<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetaliiContStudent">

    <TextView
        android:id="@+id/textViewNumeStud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginTop="145dp"
        android:layout_marginBottom="23dp"
        android:text="@string/textViewNumeStud"
        app:layout_constraintBottom_toTopOf="@+id/textViewPrenumeStudent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textViewPrenumeStudent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginBottom="20dp"
        android:text="@string/textViewPrenumeStudent"
        app:layout_constraintBottom_toTopOf="@+id/textViewEmailStudent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewEmailStudent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginBottom="324dp"
        android:text="@string/textViewEmailStudent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewDetaliiContStudent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:text="@string/textViewDetaliiContStudent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tVNumeStud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewNumeStud"
        app:layout_constraintTop_toBottomOf="@+id/textViewDetaliiContStudent" />

    <TextView
        android:id="@+id/tVPrenumeStud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="6dp"
        app:layout_constraintBottom_toTopOf="@+id/tVEmailStud"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.386"
        app:layout_constraintStart_toEndOf="@+id/textViewPrenumeStudent"
        app:layout_constraintTop_toBottomOf="@+id/tVNumeStud"
        app:layout_constraintVertical_bias="0.645" />

    <TextView
        android:id="@+id/tVEmailStud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toEndOf="@+id/textViewEmailStudent"
        app:layout_constraintTop_toBottomOf="@+id/tVPrenumeStud" />

    <Button
        android:id="@+id/buttonStergeCont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="121dp"
        android:layout_marginEnd="119dp"
        android:layout_marginBottom="151dp"
        android:text="@string/buttonStergeCont"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.879"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tVEmailStud"
        app:layout_constraintVertical_bias="1.0" />

</android.support.constraint.ConstraintLayout>